[package]
name = "link_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4" , features = ["derive","color"] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.11",default-features = false, features = ["rustls-tls"] }
select = "0.6"
tokio = { version  = "1", features = ["full"] }
