[package]
name = "link_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-musl]
linker = "rust-lld"


[dependencies]
clap = { version = "4.4" , features = ["derive","color"] }
futures = { version = "0.3", features = ["async-await"] }
#indicatif = "0.17"
#indicatif-log-bridge = { version = "0.2"}
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.11",default-features = false, features = ["rustls-tls"] }
select = "0.6"
tokio = { version  = "1", features = ["full"] }
url = "2.5"
